sxc/10.3/k8s-commerce-xc1/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:    
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  ingressClassName: "nginx"
  rules:
  - host: cd-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port:
              number: 80
  - host: cm-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm
            port:
              number: 80
  - host: id-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port:
              number: 80
  - host: bizfx-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bizfx
            port:
              number: 80
  - host: engine-authoring-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: engine-authoring
            port:
              number: 5000
  - host: engine-minions-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: engine-minions
            port:
              number: 5000
  - host: engine-shops-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: engine-shops
            port:
              number: 5000
  tls:
  - secretName: global-cd-tls
    hosts:
    - cd-placeholder-hostname
  - secretName: global-cm-tls
    hosts:
    - cm-placeholder-hostname
  - secretName: global-id-tls
    hosts:
    - id-placeholder-hostname
  - secretName: global-bizfx-tls
    hosts:
    - bizfx-placeholder-hostname
  - secretName: global-authoring-tls
    hosts:
    - engine-authoring-placeholder-hostname
  - secretName: global-minions-tls
    hosts:
    - engine-minions-placeholder-hostname
  - secretName: global-shops-tls
    hosts:
    - engine-shops-placeholder-hostname
